fix: properly detect high contrast light mode for tab icons

--- a/webview/src/components/shared/TabNavigation.css
+++ b/webview/src/components/shared/TabNavigation.css
@@ -64,11 +64,11 @@
 }
 
 body.vscode-dark .tab-icon-comment,
-body.vscode-high-contrast .tab-icon-comment {
+body.vscode-high-contrast:not(.vscode-high-contrast-light) .tab-icon-comment {
   background-image: url('../../assets/comment-dark.svg');
 }
 
 body.vscode-dark .tab-icon-tree,
-body.vscode-high-contrast .tab-icon-tree {
+body.vscode-high-contrast:not(.vscode-high-contrast-light) .tab-icon-tree {
   background-image: url('../../assets/tree-dark.svg');
 }
